rust/hogql-parser/tests/snapshots/parser_tests__select_with_and.snap
---
source: hogql-parser/tests/parser_tests.rs
expression: ast
---
{
  "Select": {
    "columns": [
      {
        "Identifier": "*"
      }
    ],
    "from": {
      "Identifier": "users"
    },
    "where_clause": {
      "BinaryOp": {
        "left": {
          "BinaryOp": {
            "left": {
              "Identifier": "active"
            },
            "op": "=",
            "right": {
              "Identifier": "true"
            }
          }
        },
        "op": "AND",
        "right": {
          "BinaryOp": {
            "left": {
              "Identifier": "role"
            },
            "op": "=",
            "right": {
              "Literal": "admin"
            }
          }
        }
      }
    }
  }
}
