rust/hogql-parser/tests/snapshots/parser_tests__simple_select.snap
---
source: hogql-parser/tests/parser_tests.rs
expression: ast
---
{
  "Program": {
    "declarations": [
      {
        "SelectStmt": {
          "columns": [
            {
              "ColumnExprIdentifier": "a"
            }
          ],
          "distinct": false,
          "from": {
            "ColumnExprIdentifier": "users"
          },
          "group_by": null,
          "having": null,
          "limit": null,
          "order_by": null,
          "where_clause": {
            "ColumnExprBinaryOp": {
              "left": {
                "ColumnExprBinaryOp": {
                  "left": {
                    "ColumnExprIdentifier": "active"
                  },
                  "op": "=",
                  "right": {
                    "ColumnExprIdentifier": "true"
                  }
                }
              },
              "op": "AND",
              "right": {
                "ColumnExprBinaryOp": {
                  "left": {
                    "ColumnExprIdentifier": "role"
                  },
                  "op": "=",
                  "right": {
                    "StringLiteral": "admin"
                  }
                }
              }
            }
          }
        }
      }
    ]
  }
}
